New Docker image, installed karma-chrome-launcher and puppeteer, add configuration file for Karma that untilizes the 'headless' Chromium browser.

--- a/TheCivicsProject/TheCivicsProject.csproj
+++ b/TheCivicsProject/TheCivicsProject.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\testing\file.ts" />
     <None Remove="ClientApp\src\app\app-routing.module.ts" />
     <None Remove="ClientApp\src\app\app.server.module.ts" />
     <None Remove="ClientApp\src\app\views\authentication-module\authentication-startup.service.ts" />
@@ -56,6 +57,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\testing\file.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\app-routing.module.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\app.server.module.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\views\authentication-module\components\authorization-component\authorization.component.ts" />
