Working on pipeline.

--- a/Docker/unit-tests/Dockerfile
+++ b/Docker/unit-tests/Dockerfile
@@ -10,31 +10,19 @@
 #	docker build -t <name to assign to image> -f <path to this dockerfile> <Path that specifies context sent to Docker daemon>
 #
 #	Examples:
-#		docker build -t unit-test-image .
+#		docker build --force-rm -t tcp-unit-tests-image:1.0.0 .
 #
 #
 # Run command: 
-#	docker 
-#		run `
-#		-it `
-#		--rm `
-#		-v '<Full patht to directory on host>:<Full path to directory in container>' 
-#		--name <desired name of container, i.e. unit-test-container> 
-#		<name of image used to create container>
+#	docker run --rm -v '<Full path to directory on host>:<Full path to directory in container>' --name <desired name of container> <Name of image>
 #
 #	Examples:
-#		docker run -it --rm -v 'D:\Code Projects\VS2017 Angular4 ASPNETCore2.1.3 Starter\VS2017 Angular4 ASPNETCore2.1.3 Starter:c:\Project' --name unit-test-container unit-test-image
+#		docker run --rm -v 'D:\pipelines\the-civics-project\TheCivicsProject\ClientApp:c:\project' --name tcp-unit-tests tcp-unit-tests-image:1.0.0
 #
 #
 # Notes:
 # When this container is run it expects:
 # 1. To be provided with a volume that has the "src" directory as a sub-directory.
-# 2. Both phantomjs-prebuilt and karma-phantomjs-launcher should by installed locally in the project.
-#      npm install phantomjs-prebuilt
-#      npm install karma-phantomjs-launcher
-#    Note that PhantomJS would not work until the \ClientApp\src\polyfill.ts file was modified.  Had to uncomment 14 lines that were originally commented out.
-# 3. Build this container with the following command line: "docker build -t Unit-Test-Container -f .\Docker\Unit-Test-Container\Dockerfile ."
-# 4. Run this container with the following command line: "docker run -it -rm Unit-Test-Container ".
 
 # Only using "microsoft/windowsservercore" image for Node.js installation.
 FROM microsoft/windowsservercore
@@ -57,10 +45,10 @@ SHELL ["cmd", "/S", "/C"]
 RUN c:\nodejs\npm install -g karma-cli
 
 # The PowerShell script that will be executed when the container is run.
-ADD [ "Startup.cmd",  "c:/" ]							# Note that with ADD you have to use forward slashes.
+ADD [ "tcp-unit-tests.cmd",  "c:/" ]							# Note that with ADD you have to use forward slashes.
 
 # Create directory that will contain volume.
-RUN mkdir Project
+RUN mkdir project
 
-# Execute this process when the container is run.
-CMD Startup.cmd karma.conf.PhantomJS.js
+# Execute this process when the container is run.  The parameter is the name of the Karma configuration file to use.
+CMD tcp-unit-tests.cmd karma.ChromeHeadless.conf.js
