Developing the pipeline.

--- a/Docker/unit-tests/Dockerfile
+++ b/Docker/unit-tests/Dockerfile
@@ -17,7 +17,7 @@
 #	docker run --rm -v '<Full path to directory on host>:<Full path to directory in container>' --name <desired name of container> <Name of image>
 #
 #	Examples:
-#		docker run --rm -v 'D:\pipelines\the-civics-project\TheCivicsProject\ClientApp:c:\project' --name tcp-unit-tests tcp-unit-tests-image:1.0.0
+#		docker run --rm -v 'D:\Code Projects\TheCivicsProject:c:\project' --name tcp-unit-tests tcp-unit-tests-image:1.0.0
 #
 #
 # Notes:
@@ -25,10 +25,10 @@
 # 1. To be provided with a volume that has the "src" directory as a sub-directory.
 
 # Only using "microsoft/windowsservercore" image for Node.js installation.
-FROM microsoft/windowsservercore
+FROM microsoft/windowsservercore 
 
-# Need PowerShell to install Nodejs
-SHELL ["powershell", "-command"]
+#SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
+SHELL ["powershell", "-Command"]
 
 # Specify which version of Node.js
 ENV NODE_VERSION 10.9.0
@@ -41,14 +41,23 @@ RUN Invoke-WebRequest $('https://nodejs.org/dist/v{0}/node-v{0}-win-x64.zip' -f 
 # Switch back to original shell.
 SHELL ["cmd", "/S", "/C"]
 
+# Modify the 'Path' environment variable so that Node and NPM can be executed without knowing the path to their location.
+# It would be nice to do something like 'ENV Path $Path;C:\nodejs'.  But this does not work.  $Path appears to be empty.
+# Instead you have to determine what 'Path' is 
+ENV Path C:\Windows\system32;C:\Windows;C:\Users\ContainerAdministrator\AppData\Local\Microsoft\WindowsApps;C:\Program Files\dotnet;C:\Users\ContainerUser\AppData\Local\Microsoft\WindowsApps;C:\Users\ContainerUser\.dotnet\tools;C:\nodejs
+
 # Install the Karma CLI (Command Line Interface) globally.  (Karma CLI does not work if installed locally in a particular project.)
-RUN c:\nodejs\npm install -g karma-cli
+RUN npm install -g karma-cli
 
-# The PowerShell script that will be executed when the container is run.
+#RUN mkdir pipelines\TheCivicsProject\ClientApp
+#RUN cd pipelines\TheCivicsProject\ClientApp
+#RUN npm i karma-chrome-launcher puppeteer
+
+# The batch file that contains the commands that will be executed when the container is run.  It basically copies the
+# entire project into the container and then executes Karma to run the unit tests.  A volume cannot be used because 
+# it confuses Karma.
 ADD [ "tcp-unit-tests.cmd",  "c:/" ]							# Note that with ADD you have to use forward slashes.
-
-# Create directory that will contain volume.
-RUN mkdir project
 
 # Execute this process when the container is run.  The parameter is the name of the Karma configuration file to use.
 CMD tcp-unit-tests.cmd karma.ChromeHeadless.conf.js
+
