--- a/TheCivicsProject/ClientApp/package.json
+++ b/TheCivicsProject/ClientApp/package.json
@@ -45,6 +45,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^10.9.4",
     "codelyzer": "^4.4.4",
+    "is-docker": "^1.1.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -52,6 +53,8 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "phantomjs-prebuilt": "^2.1.16",
     "protractor": "~5.1.2",
     "puppeteer": "^1.11.0",
     "ts-node": "~4.1.0",
